# savants

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  compare.py  run.sh
demo/: with-savants.tape  with-savants.txt  without-savants.tape  without-savants.txt
scripts/: e2e-test.sh  install.sh
src/: call_index.rs  code_parser.rs  config.rs  embedding_store.rs  embeddings.rs  freshness.rs  main.rs  semantic_search.rs  telemetry.rs  update_check.rs
src/commands/: benchmark.rs  connect.rs  docs.rs  mcp.rs  mod.rs  status.rs  up.rs  usage.rs
src/mcp/: cloud_proxy.rs  mod.rs  offline.rs
tests/: integration_test.rs
