[package]
name = "savants"
version = "0.1.0"
edition = "2021"
description = "The context engine for your LLM. Semantic search, code intelligence, MCP tools."
license = "MIT"
repository = "https://github.com/savants-dev/savants"
homepage = "https://savants.dev"
keywords = ["mcp", "code-search", "semantic-search", "ai", "developer-tools"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "savants"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dirs = "5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
walkdir = "2"
fastembed = { version = "5", optional = true }

[features]
default = ["embeddings"]
embeddings = ["fastembed"]

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1
